[styling] (mobile) Restored "overflow: auto" for "root" tag (it prevents auth pages scrolling of the background on mobile devices with small display height).

--- a/src/assets/styles/common/common.scss
+++ b/src/assets/styles/common/common.scss
@@ -3,3 +3,7 @@ body,
 #root {
   height: 100%;
 }
+
+#root {
+  overflow: auto;
+}
